# rogue.hub.v2

./: .gitignore  Cargo.toml  docker-compose.production.yaml  docker-compose.yaml
.github/workflows/: build-api.yml  build-decoder.yml  build-indexer.yml  build-migrations.yml
.junie/: guidelines.md
api/: Cargo.toml  Dockerfile
api/src/: error.rs  main.rs
api/src/api/: indexer.rs  marketplace.rs  mod.rs  staratlas.rs
database/: 000_create.sh  001_migrate.sh  002_revert.sh  Cargo.toml  Dockerfile  README.md  entrypoint.sh
database/examples/: indexer_example.rs  signature_example.rs
database/migrations/: 005_create_indexer.sql  005_create_program_signatures_table.sql  010_create_indexer_table.sql  015_create_signatures_table.sql  025_create_staratlas.sql  040_create_marketplace.sql  100_create_indexer.sql  20230601000110_create_indexer.sql
database/src/: connection.rs  error.rs  lib.rs  types.rs
database/src/models/: indexer.rs  marketplace.rs  mod.rs  signature.rs  staratlas.rs
database/src/queries/: indexer.rs  marketplace.rs  mod.rs  signature.rs  staratlas.rs
decoder/: Cargo.toml  Dockerfile  buddylink_0.30.0.json  marketplace_0.30.0.json  readme.md
decoder/src/: lib.rs
decoder/src/extra/: mod.rs  transferHook.rs
decoder/src/staratlas/: buddy.rs  marketplace.rs  mod.rs
indexer/: Cargo.toml  Dockerfile
indexer/src/: args.rs  main.rs
processor/: Cargo.toml  Dockerfile
processor/src/: args.rs  convert.rs  main.rs
processor/src/processor/: marketplace.rs
