[package]
name = "decoder"
version = "0.1.0"
edition.workspace = true
description = "Decoder library for rogue.hub.v2"

[features]
no-entrypoint = []

[dependencies]
solana-sdk = { workspace = true }
borsh = { workspace = true }
borsh-derive = { workspace = true }
anchor-decoder = { workspace = true }