[package]
name = "processor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
dotenv = { workspace = true }
chrono.workspace = true
db.workspace = true
decoder.workspace = true

solana-client.workspace = true
solana-sdk.workspace = true
solana-commitment-config.workspace = true
solana-transaction-status.workspace = true
bs58 = "0.5.1"
hex = "0.4.3"
rust_decimal.workspace = true